--- a/Ausarbeitungen/schoppem/literatur.bib
+++ b/Ausarbeitungen/schoppem/literatur.bib
@@ -11,7 +11,7 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	title = {{Tiny Tapeout Homepage}},
 	year = {2023},
 	note = {online verfügbar unter 
-	\url{https://tinytapeout.com};
+	\url{https://tinytapeout.com}
 	zuletzt aufgerufen am 02.07.2023}
 }
 
@@ -20,7 +20,7 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	title = {{Linear rückgekoppelte Schieberegister}},
 	year = {2023},
 	note = {online verfügbar unter 
-	\url{https://de.wikipedia.org/wiki/Linear_r%C3%BCckgekoppeltes_Schieberegister#Arten};
+	\url{https://de.wikipedia.org/wiki/Linear_r%C3%BCckgekoppeltes_Schieberegister#Arten}
 	zuletzt aufgerufen am 03.07.2023}
 }
 
@@ -33,4 +33,32 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	pages={351--351},
 	year={2008},
 	publisher={Vieweg Verlag Wiesbaden}
+}
+
+
+@ONLINE{zyboBoard,
+	author = {Digilent},
+	title = {{Zybo Zynq-7000 Reference}},
+	year = {2023},
+	note = {online verfügbar unter 
+	\url{https://digilent.com/reference/programmable-logic/zybo/start}
+	zuletzt aufgerufen am 07.07.2023}
+}
+
+@ONLINE{gtkwave,
+	author = {Udi Finkelstein},
+	title = {{GTKWave Homepage}},
+	year = {2023},
+	note = {online verfügbar unter 
+	\url{https://gtkwave.sourceforge.net/}
+	zuletzt aufgerufen am 07.07.2023}
+}
+
+@ONLINE{yosys,
+	author = {Claire Xenia Wolf},
+	title = {{Yosys Open SYnthesis Suite Github}},
+	year = {2023},
+	note = {online verfügbar unter 
+	\url{https://github.com/YosysHQ/yosys}
+	zuletzt aufgerufen am 07.07.2023}
 }
