--- a/Ausarbeitungen/schoppem/ausarbeitung.tex
+++ b/Ausarbeitungen/schoppem/ausarbeitung.tex
@@ -106,9 +106,9 @@
 						\hspace{11.3cm} Fax ~~~ +49 821 5586-3499 \\ ~ \\
 						\hspace{11.3cm} Verfasser der Ausarbeitung: \\
 						\hspace{11.3cm} Mathias Schoppe \\
-						\hspace{11.3cm} Matr. Nr.: 000000 \\
+						\hspace{11.3cm} Matr. Nr.: 2165952 \\
 						\hspace{11.3cm} M. Sc. Informatik \\
-						\hspace{11.3cm} Teamkollegen: Sascha Testname \\
+						\hspace{11.3cm} Teamkollegen: Sascha Binkert \\
 						\hspace{11.3cm} und Timo Winklbauer \\
 						
 					}
