--- a/Ausarbeitungen/schoppem/literatur.bib
+++ b/Ausarbeitungen/schoppem/literatur.bib
@@ -10,37 +10,50 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	author = {Tiny Tapeout},
 	title = {{Tiny Tapeout Homepage}},
 	year = {2023},
-	note = {online verfügbar unter 
+	note = {online verf\"ugbar unter 
 	\url{https://tinytapeout.com}
 	zuletzt aufgerufen am 02.07.2023}
 }
 
 @ONLINE{LFSRWiki,
 	author = {Wikipedia},
-	title = {{Linear rückgekoppelte Schieberegister}},
+	title = {{Linear r\"uckgekoppelte Schieberegister}},
 	year = {2023},
-	note = {online verfügbar unter 
-	\url{https://de.wikipedia.org/wiki/Linear_r%C3%BCckgekoppeltes_Schieberegister#Arten}
+	note = {online verf\"ugbar unter 
+	\url{https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/LFSR-Fibonacci.svg/650px-LFSR-Fibonacci.svg.png}
 	zuletzt aufgerufen am 03.07.2023}
 }
 
 @article{fox2008linear,
-	title={Linear Rueckgekoppelte Schieberegister},
+	title={Linear R\"uckgekoppelte Schieberegister},
 	author={Fox, Dirk},
 	journal={Datenschutz und Datensicherheit-DuD},
 	volume={32},
 	number={5},
-	pages={351--351},
+	pages={351},
 	year={2008},
 	publisher={Vieweg Verlag Wiesbaden}
 }
 
+@article{timoEval,
+	title={Entwicklung eines ICs - Tiny Tapeout},
+	author={Timo Winklbauer},
+	pages={10},
+	year={2023}
+}
+
+@article{saschaGDS,
+	title={Entwicklung eines ICs - Vorstellung von verschiedenen Tools},
+	author={Sascha Binkert},
+	pages={1--3},
+	year={2023}
+}
 
 @ONLINE{zyboBoard,
 	author = {Digilent},
 	title = {{Zybo Zynq-7000 Reference}},
 	year = {2023},
-	note = {online verfügbar unter 
+	note = {online verf\"ugbar unter 
 	\url{https://digilent.com/reference/programmable-logic/zybo/start}
 	zuletzt aufgerufen am 07.07.2023}
 }
@@ -49,7 +62,7 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	author = {Udi Finkelstein},
 	title = {{GTKWave Homepage}},
 	year = {2023},
-	note = {online verfügbar unter 
+	note = {online verf\"ugbar unter 
 	\url{https://gtkwave.sourceforge.net/}
 	zuletzt aufgerufen am 07.07.2023}
 }
@@ -58,7 +71,7 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	author = {Claire Xenia Wolf},
 	title = {{Yosys Open SYnthesis Suite Github}},
 	year = {2023},
-	note = {online verfügbar unter 
+	note = {online verf\"ugbar unter 
 	\url{https://github.com/YosysHQ/yosys}
 	zuletzt aufgerufen am 07.07.2023}
 }
